[signin] Use OAuth2 Multilogin

Bug: 771911
Change-Id: Ifc9d272293a870a1fbc1216ce60b9781861c876a